# sonic-mobile-interface

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  org.kde.plasma.mobileshell.metainfo.xml  plasma-mobile.service  plasma_phone_components.notifyrc
components/masklayerplugin/: CMakeLists.txt  masklayer.cpp  masklayer.h  masklayerplugin.cpp  masklayerplugin.h  maskmanager.cpp  maskmanager.h
components/mobileshell/: CMakeLists.txt  TopPanelControls.qml  mobileshellplugin.cpp  mobileshellsettings.cpp  resources.qrc  shellutil.cpp  shellutil.h
components/mobileshell/components/: swipearea.cpp  swipearea.h
components/mobileshell/dbus/: org.kde.KScreen.xml
components/mobileshell/homescreen/: homescreen.cpp  homescreen.h  homescreenmodel.cpp  homescreenmodel.h
components/mobileshell/masklayer/: masklayer.cpp
components/mobileshell/notifications/: notificationfilemenu.cpp
components/mobileshell/qml/: Shell.qml  qmldir
components/mobileshell/qml/actiondrawer/: ActionDrawer.qml  ActionDrawerOpenSurface.qml  ContentContainer.qml  LandscapeContentContainer.qml  NotificationDrawer.qml  PortraitContentContainer.qml
components/mobileshell/qml/actiondrawer/private/: ContentContainer.qml  LandscapeContentContainer.qml  QuickSettingsDelegate.qml
components/mobileshell/qml/actiondrawer/quicksettings/: BrightnessItem.qml  Handle.qml  MediaPlayerWidget.qml  QuickSettings.qml  QuickSettingsContainer.qml  QuickSettingsDelegate.qml  QuickSettingsDrawer.qml  QuickSettingsFullDelegate.qml  QuickSettingsMinimizedDelegate.qml  QuickSettingsPanel.qml  SettingsModel.qml
components/mobileshell/qml/components/: BaseItem.qml  Constants.qml  Direction.qml  FlickableOpacityGradient.qml  GridView.qml  MarqueeLabel.qml  PanelBackground.qml  ScreenEdgeDragEffect.qml  StartupFeedback.qml  StartupFeedbackWindows.qml  util.js
components/mobileshell/qml/dataproviders/: AudioInfo.qml  BatteryProvider.qml  BluetoothProvider.qml  SignalStrengthProvider.qml  VolumeProvider.qml  WifiProvider.qml
components/mobileshell/qml/homescreen/: BlurEffect.qml  DoubleTapToSleep.qml  HomeScreen.qml  WallpaperSelector.qml
components/mobileshell/qml/navigationpanel/: NavigationPanel.qml  NavigationPanelButton.qml
components/mobileshell/qml/notificationpopup/: NotificationPopup.qml  NotificationPopupManager.qml
components/mobileshell/qml/popups/actionbuttons/: RotationButton.qml
components/mobileshell/qml/popups/kscreenosd/: KScreenOSDProvider.qml
components/mobileshell/qml/popups/notifications/: NotificationPopup.qml  NotificationPopupManager.qml  NotificationPopupProvider.qml
components/mobileshell/qml/popups/volumeosd/: AudioApplet.qml
components/mobileshell/qml/statusbar/: ClockText.qml  StatusBar.qml
components/mobileshell/qml/statusbar/indicators/: BatteryIndicator.qml  BluetoothIndicator.qml  SignalStrengthIndicator.qml
components/mobileshell/qml/taskswitcher/: FlickContainer.qml  Task.qml  TaskList.qml  TaskSwitcher.qml  TaskSwitcherState.qml
components/mobileshell/qml/volumeosd/: AudioApplet.qml  ListItemBase.qml  PopupCard.qml  VolumeOSD.qml  VolumeOSDProvider.qml
components/mobileshell/qml/widgets/: MediaControlsWidget.qml  MediaPlayerWidget.qml  NotificationsWidget.qml
components/mobileshell/qml/widgets/krunner/: KRunnerScreen.qml  KRunnerWidget.qml  KRunnerWindow.qml
components/mobileshell/qml/widgets/mediacontrols/: BlurredBackground.qml  MediaControlsSource.qml  MediaControlsWidget.qml
components/mobileshell/qml/widgets/notifications/: DraggableDelegate.qml  (+11 more)
components/shellsettingsplugin/: CMakeLists.txt  kwinsettings.cpp  mobileshellsettings.cpp  mobileshellsettings.h  mobileshellsettings.kcfg  mobileshellsettings.kcfgc  panelsettings.cpp  panelsettings.h  shellsettingsplugin.cpp  shellsettingsplugin.h
components/waydroidintegrationplugin/: CMakeLists.txt  waydroidapplication.cpp  waydroidapplication.h  waydroidapplicationdbusclient.cpp  waydroidapplicationdbusclient.h  waydroidapplicationdbusobject.cpp  waydroidapplicationdbusobject.h  waydroidapplicationlistmodel.cpp  waydroidapplicationlistmodel.h  waydroiddbusclient.cpp  waydroiddbusclient.h  waydroiddbusobject.cpp  waydroiddbusobject.h  waydroidstate.cpp  waydroidstate.h
components/waydroidintegrationplugin/kauth/: CMakeLists.txt  waydroidhelper.actions  waydroidhelper.cpp
containments/panel/: CMakeLists.txt  metadata.json  phonepanel.cpp  phonepanel.h  signalindicator.cpp  signalindicator.h
containments/panel/package/: metadata.json
containments/panel/qml/: main.qml
initialstart/: CMakeLists.txt  config.h  main.cpp  resources.qrc  settings.cpp  settings.h  wizard.cpp  wizard.h
initialstart/modules/: CMakeLists.txt
initialstart/modules/cellular/: CMakeLists.txt  cellularplugin.cpp  cellularutil.cpp  cellularutil.h
initialstart/modules/cellular/package/: metadata.json
initialstart/modules/display/: metadata.json
initialstart/modules/finished/: metadata.json
initialstart/modules/prepare/: CMakeLists.txt  prepareutil.cpp
initialstart/modules/prepare/package/: metadata.json
initialstart/modules/time/: CMakeLists.txt  timeutil.cpp  timeutil.h  timezonemodel.cpp
initialstart/modules/time/package/: metadata.json
initialstart/modules/wifi/: CMakeLists.txt
initialstart/modules/wifi/package/: metadata.json
initialstart/qml/: LandingComponent.qml  SetupStep.qml  Wizard.qml  main.qml
initialstart/qml/steps/: CellularStep.qml  DisplayScalingStep.qml  FinalStep.qml
kded/: CMakeLists.txt  daemon.cpp  settings.cpp  start.cpp
kded/autodetectapn/: autodetectapn.cpp  autodetectapn.h
kwin/mobiletaskswitcher/: CMakeLists.txt  main.cpp  mobiletaskswitcherconfig.kcfg  mobiletaskswitcherconfig.kcfgc  mobiletaskswitchereffect.cpp  mobiletaskswitchereffect.h
kwin/mobiletaskswitcher/plugin/: CMakeLists.txt  effecttouchborder.cpp  taskfiltermodel.cpp  taskfiltermodel.h
kwin/mobiletaskswitcher/qml/: FlickContainer.qml  Task.qml  TaskList.qml  TaskSwitcher.qml  TaskSwitcherState.qml
mmplugin/: CMakeLists.txt  mmqmlplugin.cpp  mmqmlplugin.h  qmldir  signalindicator.cpp  signalindicator.h
(+442 files in other folders)
